fix backgroundcolor and margin-top to align icons to center vertically

--- a/src/css/components/_footer.css
+++ b/src/css/components/_footer.css
@@ -1,16 +1,19 @@
 footer{
     width: 100%;
-    /* background-color: #b7db9f; */
-    background-color: var(--color-gray-light);
+    background-color: #b7db9f;
+    /* background-color: var(--color-gray-light); */
     overflow: hidden;
     bottom: 0;
     display: grid;
     justify-items: center;
-    margin-top: 20px;
+    align-items: center;
 }
 .footer img{
     width: 30px;
     height: 30px;
+}
+.footer img:hover{
+    transform: scale(1.5);
 }
 .footer p{
     margin-bottom: 20px;
@@ -24,7 +27,7 @@ footer{
     align-items: center;
     text-align: center;
     padding: 0;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .footer li{
